# matching-engine-rs

./: Cargo.toml  LICENSE  README.md
itch-parser/: .gitignore  Cargo.toml  README.md
itch-parser/src/: body.rs  errors.rs  lib.rs  main.rs  message.rs  message_stream.rs  price.rs  utils.rs
optimized-lob/: Cargo.toml  README.md
optimized-lob/src/: level.rs  lib.rs  order.rs  orderbook.rs  orderbook_manager.rs  pool.rs  price.rs  quantity.rs  utils.rs
src/: lib.rs  main.rs
src/orderbook/: level.rs  mod.rs  order.rs  orderbook.rs  orderbook_manager.rs  pool.rs  price.rs  quantity.rs  symbol.rs  utils.rs
src/tests/: mod.rs  order_test.rs
src/utils/: errors.rs
tests/: .gitignore  Cargo.toml
tests/src/: main.rs  test_itch_parser.rs  test_lob.rs
tests/src/lob_tests/: mod.rs  same_book_test.rs  same_level_and_book_test.rs  test_order.rs  utils.rs
